[package]
name = "voronoi-sweep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
proptest = "1.4.0"
rand = { version = "0.8.5", features = ["std", "small_rng"] }

[profile.bench]
debug = true
